# AI-Powered-Content-Generation-Optimization-Tool

./: .env  .gitignore  Dockerfile  MANUAL_TESTING_GUIDE.md  README.md  README_MANUAL_TEST.md  manual_test_api.py  pyproject.toml  requirements.txt  test_analytics_integration.py  test_manual_api.py  test_phase2_implementation.py  test_phase3_integration.py
.claude/: consititution_promot
.claude/agents/: content_generation.agent.md  content_optimization.agent.md  myspecification  research.agent.md  workflow_orchestrator.agent.md
.claude/commands/: myprojectseo
.claude/communication/: return_mechanisms.md
.claude/environments/: execution_environments.md
.claude/interfaces/: inputs_outputs.md
.specify/memory/: constitution.md
docs/: analytics_insights_api.md  api_endpoints_phase3.md  quickstart_phase3.md  usage_examples_phase3.md
specs/1-ai-content-tool/: data-model.md  data-model_phase2.md  plan.md  plan_phase2.md  quickstart.md  quickstart_phase2.md  research.md  research_phase2.md  spec.md  tasks.md  tasks_phase2.md  tasks_phase3.md  tasks_phase4.md
specs/ai-subagents/: tasks.md
specs/master/: plan.md  tasks.md
src/api/: main.py
src/config/: settings.py
src/models/: analytics.py  content_generation.py  ethics_report.py  export_package.py  insights.py  quality_review.py  research_result.py  seo_analysis.py  workflow.py
src/services/: analytics_service.py  content_generation.py  ethics_review.py  export_management.py  insights_service.py  llm_integration.py  quality_review.py  research_assistance.py  seo_analysis.py  validation.py  (+1 more)
(+37 files in other folders)
