[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-content-generator"
version = "1.0.0"
description = "AI-powered content generation and optimization tool"
readme = "README.md"
authors = [{name = "Developer", email = "dev@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "pydantic>=2.5.0",
    "openai>=1.3.5",
    "anthropic>=0.5.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/your-repo/ai-content-generator"
Repository = "https://github.com/your-repo/ai-content-generator"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"